kubernetes/frontend-service.yaml
# Service for frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: safeshipping
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
